--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,30 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-
-  <LinearLayout
-      android:layout_width="match_parent"
-      app:layout_constraintTop_toTopOf="parent"
-      android:orientation="vertical"
-      android:layout_height="wrap_content">
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/login"
-          android:textColor="@color/black"
-          android:text="@string/app_name"
-          android:textSize="22sp"/>
-
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/parol"
-          android:layout_marginTop="20dp"
-          android:textColor="@color/black"
-          android:text="@string/app_name"
-          android:textSize="22sp"/>
-
-  </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/res"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
